[project]
name = "perftrack"
version = "0.1.0"
description = "Lightweight CLI tool to detect performance regressions by comparing local benchmark snapshots."
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [
    { name = "Pravin", email = "p-r-a-v-i-n@users.noreply.github.com" }
]
requires-python = ">=3.9"
keywords = ["performance", "benchmark", "regression", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]

dependencies = [
    "psutil"
]

[project.urls]
Homepage = "https://github.com/p-r-a-v-i-n/perftrack"
Issues = "https://github.com/p-r-a-v-i-n/perftrack/issues"

[project.scripts]
perftrack = "perftrack.cli:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
