[project]
name = "perftrack"
version = "0.1.0"
description = "Lightweight CLI tool to detect performance regressions by comparing local benchmark snapshots."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Pravin", email = "p-r-a-v-i-n@users.noreply.github.com" }
]
requires-python = ">=3.9"
keywords = ["performance", "benchmark", "regression", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]

dependencies = [
  "psutil>=7.1.3,<8"
]

[project.urls]
Homepage = "https://github.com/p-r-a-v-i-n/perftrack"
Issues = "https://github.com/p-r-a-v-i-n/perftrack/issues"

[project.scripts]
perftrack = "perftrack.cli:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"


[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pre-commit",
  "ruff",
]

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
    ".venv",
    ".env",
    "env",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "D"]
ignore = [
    "D100",
    "D104",
    "D107",
]

docstring-convention = "pep257"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=perftrack --cov-report=term-missing"
